Stable file structure update

--- a/Settings.ini
+++ b/Settings.ini
@@ -2,4 +2,4 @@
 TradeDatabase = C:\Users\SK\Desktop\Bars\HOSP_OFFICE_be.mdb
 GoodsDatabase = C:\Users\SK\Desktop\Bars\EXCEL_KART_2022.mdb
 DevicesIDs = "Коды приборов.docx"
-OutDBs = "\\Bases"
+TecomGenerator = \\Server\work\technical_support\Баркоды\Генератор бар-кода 100 (новый)\Reagent serial number generator_RUS.exe
