--- a/Settings.ini
+++ b/Settings.ini
@@ -1,5 +1,13 @@
+[Parameters]
+Device = Bioelab
+Hospital = Фидес
+DeviceUID = 
+DeviceSN = LICG900V02AES2K0WH04053F
+InvoiceN = 
+TaskFromInvoice = No
 [PathTo]
-TradeDatabase = C:\Users\SK\Desktop\Bars\HOSP_OFFICE_be.mdb
-GoodsDatabase = C:\Users\SK\Desktop\Bars\EXCEL_KART_2022.mdb
+TradeDatabase = \\SERVER\Programm\trade_database\HOSP_OFFICE_be.mdb
+GoodsDatabase = \\SERVER\Programm\trade_database\EXCEL_KART_2022.mdb
 DevicesIDs = "Коды приборов.docx"
 TecomGenerator = \\Server\work\technical_support\Баркоды\Генератор бар-кода 100 (новый)\Reagent serial number generator_RUS.exe
+BioelabGenerator = \\Server\work\technical_support\Баркоды\Bioelab\DigitalBarcodeGenerator.exe
