--- a/Settings.ini
+++ b/Settings.ini
@@ -1,9 +1,9 @@
 [Parameters]
 Device = Bioelab
-Hospital = Фидес
-DeviceUID = 
-DeviceSN = LICG900V02AES2K0WH04053F
-InvoiceN = 
+Hospital = ГУЗ СО «Балаковская ГКБ»
+DeviceUID = 1281372013
+DeviceSN = LICG900V02AES2K1KH05206A
+InvoiceN = 2337-21,2338-21,2378-21
 TaskFromInvoice = No
 [PathTo]
 TradeDatabase = \\SERVER\Programm\trade_database\HOSP_OFFICE_be.mdb
