--- a/Settings.ini
+++ b/Settings.ini
@@ -1,10 +1,10 @@
 [Parameters]
-Device = Bioelab
-Hospital = ГУЗ СО «Балаковская ГКБ»
-DeviceUID = 1281372013
-DeviceSN = LICG900V02AES2K1KH05206A
-InvoiceN = 2337-21,2338-21,2378-21
-TaskFromInvoice = No
+Device = Tecom
+Hospital = ООО "Ветеринарная клиника "Барк", г. Архангельск
+DeviceUID = LICG900V03L2-E09846880A5BC
+DeviceSN = LICG900V03L2-E0984E
+InvoiceN = 0117-22
+TaskFromInvoice = Yes
 [PathTo]
 TradeDatabase = \\SERVER\Programm\trade_database\HOSP_OFFICE_be.mdb
 GoodsDatabase = \\SERVER\Programm\trade_database\EXCEL_KART_2022.mdb
