--- a/Settings.ini
+++ b/Settings.ini
@@ -1,13 +1,15 @@
 [Parameters]
-Device = Tecom
-Hospital = ООО "Ветеринарная клиника "Барк", г. Архангельск
-DeviceUID = LICG900V03L2-E09846880A5BC
-DeviceSN = LICG900V03L2-E0984E
-InvoiceN = 0117-22
-TaskFromInvoice = Yes
+device = Tecom
+hospital = ООО "Ветеринарная клиника "Барк", г. Архангельск
+device_uid = LICG900V03L2-E09846880A5BC
+device_sn = LICG900V03L2-E0984E
+invoice_n = dddd
+task_from_invoice = No
+
 [PathTo]
-TradeDatabase = \\SERVER\Programm\trade_database\HOSP_OFFICE_be.mdb
-GoodsDatabase = \\SERVER\Programm\trade_database\EXCEL_KART_2022.mdb
-DevicesIDs = "Коды приборов.docx"
-TecomGenerator = \\Server\work\technical_support\Баркоды\Генератор бар-кода 100 (новый)\Reagent serial number generator_RUS.exe
-BioelabGenerator = \\Server\work\technical_support\Баркоды\Bioelab\DigitalBarcodeGenerator.exe
+trade_database = \\SERVER\Programm\trade_database\HOSP_OFFICE_be.mdb
+goods_database = \\SERVER\Programm\trade_database\EXCEL_KART_2022.mdb
+devices_ids = "Коды приборов.docx"
+tecom_generator = \\Server\work\technical_support\Баркоды\Генератор бар-кода 100 (новый)\Reagent serial number generator_RUS.exe
+bioelab_generator = \\Server\work\technical_support\Баркоды\Bioelab\DigitalBarcodeGenerator.exe
+
