--- a/Settings.ini
+++ b/Settings.ini
@@ -1,15 +1,15 @@
 [Parameters]
-device = Tecom
-hospital = ООО "Ветеринарная клиника "Барк", г. Архангельск
-device_uid = LICG900V03L2-E09846880A5BC
-device_sn = LICG900V03L2-E0984E
-invoice_n = dddd
+device = Urit
+hospital = ГБУЗ РМ Ковылкинская МБ (200)
+device_uid = 1823169676
+device_sn = LICG900V02803181051
+invoice_n = 0130-22,0131-22,0165-22
 task_from_invoice = Yes
 
 [PathTo]
 trade_database = \\SERVER\Programm\trade_database\HOSP_OFFICE_be.mdb
 goods_database = \\SERVER\Programm\trade_database\EXCEL_KART_2022.mdb
-devices_ids = "Коды приборов.docx"
+devices_ids = \\Server\work\technical_support\Баркоды\Коды приборов.docx
 tecom_generator = \\Server\work\technical_support\Баркоды\Генератор бар-кода 100 (новый)\Reagent serial number generator_RUS.exe
 bioelab_generator = \\Server\work\technical_support\Баркоды\Bioelab\DigitalBarcodeGenerator.exe
 
