--- a/Settings.ini
+++ b/Settings.ini
@@ -1,10 +1,10 @@
 [Parameters]
 device = Urit
-hospital = ГБУЗ РМ Ковылкинская МБ (200)
-device_uid = 1823169676
+hospital = ГБУЗ РМ Ковылкинская МБ (300)
+device_uid = 111977093
 device_sn = LICG900V02803181051
 invoice_n = 0130-22,0131-22,0165-22
-task_from_invoice = Yes
+task_from_invoice = No
 
 [PathTo]
 trade_database = \\SERVER\Programm\trade_database\HOSP_OFFICE_be.mdb
