--- a/Settings.ini
+++ b/Settings.ini
@@ -1,10 +1,10 @@
 [Parameters]
-device = Urit
-hospital = ГБУЗ РМ Ковылкинская МБ (300)
-device_uid = 111977093
-device_sn = LICG900V02803181051
-invoice_n = 0130-22,0131-22,0165-22
-task_from_invoice = No
+device = Bioelab
+hospital = ООО «Ветеринарный центр «Ноев ковчег», г. Новосибирск 
+device_uid = LICG900V03L2-E19605BB35943
+device_sn = LICG900V03L2-E1960
+invoice_n = 0191-22
+task_from_invoice = Yes
 
 [PathTo]
 trade_database = \\SERVER\Programm\trade_database\HOSP_OFFICE_be.mdb
